libs/wingc/src/jsify/snapshots/fail_unqualified_lift.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Cannot qualify access to a lifted object of type "Queue" 6:6
