libs/wingc/src/jsify/snapshots/fail_unqualified_lift_element_from_collection_of_objects.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Cannot qualify access to a lifted object of type "Bucket" 5:6
