libs/wingc/src/jsify/snapshots/fail_unqualified_lift_return.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Expression of type "Queue" references an unknown preflight object, can't qualify its capabilities (see https://github.com/winglang/wing/issues/76 for details) 11:6
