libs/wingc/src/jsify/snapshots/fails_base_class_with_lifted_field_object_unqualified.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Cannot qualify access to a lifted object of type "Bucket" 12:8
