libs/wingc/src/jsify/snapshots/fails_if_referencing_unknown_field.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Member "b" doesn't exist in "MyInflightClass" 3:13
