libs/wingc/src/jsify/snapshots/fails_invalid_closure_type.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Expected type to be "inflight (event: str): void", but got "inflight (s: num): unknown" instead 2:23
